# acad-extractor

./: .gitignore  README.md
cpp/: CMakeLists.txt  core.cpp  core.h  howto.txt  test.cpp  utils.cpp  utils.h
python/: howto-c-api.txt  howto.txt  test_py.py  test_pyd.py  test_sip.py
python/acad-extractor/: CMakeLists.txt  README.md  acad-extractor.sip  project.py  pyproject.toml
python/acad-extractor-c-api/: README.md  acad-extractor.cpp  pyproject.toml  setup.cfg  setup.py
