[build-system]
requires = ["setuptools>=58.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acad-extractor"
version = "1.0.8"
authors = [
  { name="Alexandr Gusev", email="alphacity@yandex.ru" },
]
description = "A quick tool to extract block attributes and properties from AutoCAD drawings"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "quick",
    "extract",
    "block",
    "attributes",
    "properties",
    "AutoCAD"
]
requires-python = ">=3.9.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Alexandr-Gusev/acad-extractor"
