[build-system]
requires = ["sip==6.8.1"]
build-backend = "sipbuild.api"

[project]
name = "acad-extractor"
version = "1.0.0"
authors = [
  { name="Alexandr Gusev", email="alphacity@yandex.ru" },
]
description = "A quick tool to extract block attributes and properties from AutoCAD drawings"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "quick",
    "extract",
    "block",
    "attributes",
    "properties",
    "AutoCAD"
]
requires-python = ">=3.9.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Alexandr-Gusev/acad-extractor"

[tool.sip.bindings.acad-extractor]
headers = ["core.h"]
include-dirs = ["../../cpp"]
libraries = ["oleaut32", "ole32"]
library-dirs = ["../../cpp/build"]
